--- a/clientv2/package.json
+++ b/clientv2/package.json
@@ -172,6 +172,7 @@
     "redux-saga": "0.16.0",
     "reselect": "3.0.1",
     "sanitize.css": "4.1.0",
+    "socket.io-client": "^2.1.1",
     "styled-components": "3.3.2",
     "warning": "4.0.1",
     "whatwg-fetch": "2.0.4"
